--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,12 @@
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
+        
+        <div text-align="center">
+        <a id="cy-effective-orcid-url" class="underline" href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align: top">
+	      <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width: 1em; margin-inline-start: 0.5em" alt="ORCID"/></a>
+        </div>
+          
       </header>
       <section>
 
