--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         
         <div text-align="center">
         <a id="cy-effective-orcid-url" class="underline" href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align: top">
-	      <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width: 1em; margin-inline-start: 0.5em" alt="ORCID"/></a>
+	      <img src="pics/orcid.png" style="width: 24px; margin-inline-start: 0.5em" alt="ORCID"/></a>
         </div>
           
       </header>
