--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,16 +16,31 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title }}</h1>
+	
+	      <p>Researcher in Software Engineering</p>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
         
         <div text-align="center">
-        <a id="cy-effective-orcid-url" class="underline" href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align: top">
-	      <img src="pics/orcid.png" style="width: 24px; margin-inline-start: 0.5em" alt="ORCID"/></a>
+        <a href="mailto:jacob.krueger@rub.de">
+		<img src="logos/mail.png" style="height=24px margin-inline-start: 0.5em" alt="Mail">
+        </a>
+	      
+        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="orcid.widget" rel="me noopener noreferrer">
+		<img src="logos/gs.png" style="height=24px margin-inline-start: 0.5em" alt="Scholar"/></a>
+           
+        <a href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer">
+		<img src="logos/orcid.png" style="height=24px margin-inline-start: 0.5em" alt="ORCID"/></a>
+		
+        <a href="https://twitter.com/JacobKrueger_" target="orcid.widget" rel="me noopener noreferrer">
+	      <img src="logos/twitter.png" style="height=24px margin-inline-start: 0.5em" alt="Twitter"/></a>
         </div>
-          
+        
+	<p>
+		<a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a>
+	</p>
       </header>
       <section>
 
