--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,17 +25,21 @@
         
         <div text-align="center">
         <a href="mailto:jacob.krueger@rub.de">
-		<img src="logos/mail.png" style="height=24px margin-inline-start: 0.5em" alt="Mail">
+		<img src="logos/mail.png" height="24px" style="margin-inline-start: 0.5em" alt="Mail">
         </a>
 	      
         <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="orcid.widget" rel="me noopener noreferrer">
-		<img src="logos/gs.png" style="height=24px margin-inline-start: 0.5em" alt="Scholar"/></a>
-           
+		<img src="logos/gs.png" height="24px" style="margin-inline-start: 0.5em" alt="Scholar"/></a>
+        
+        <a href="https://dblp.uni-trier.de/pid/186/2756.html">
+		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 0.5em" alt="Mail">
+        </a>
+		
         <a href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer">
-		<img src="logos/orcid.png" style="height=24px margin-inline-start: 0.5em" alt="ORCID"/></a>
+		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 0.5em" alt="ORCID"/></a>
 		
         <a href="https://twitter.com/JacobKrueger_" target="orcid.widget" rel="me noopener noreferrer">
-	      <img src="logos/twitter.png" style="height=24px margin-inline-start: 0.5em" alt="Twitter"/></a>
+	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 0.5em" alt="Twitter"/></a>
         </div>
         
 	<p>
