--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,11 @@
       <header>
         <h1>{{ site.title }}</h1>
 	
-	      <p>Researcher in Software Engineering</p>
+	<p>
+		Researcher in Software Engineering
+		
+		<a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a>
+	</p>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -28,23 +32,19 @@
 		<img src="logos/mail.png" height="24px" style="margin-inline-start: 0.5em" alt="Mail">
         </a>
 	      
-        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="orcid.widget" rel="me noopener noreferrer">
+        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" rel="me noopener noreferrer">
 		<img src="logos/gs.png" height="24px" style="margin-inline-start: 0.5em" alt="Scholar"/></a>
         
-        <a href="https://dblp.uni-trier.de/pid/186/2756.html">
+        <a href="https://dblp.uni-trier.de/pid/186/2756.html" rel="me noopener noreferrer">
 		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 0.5em" alt="Mail">
         </a>
 		
         <a href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer">
 		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 0.5em" alt="ORCID"/></a>
 		
-        <a href="https://twitter.com/JacobKrueger_" target="orcid.widget" rel="me noopener noreferrer">
+        <a href="https://twitter.com/JacobKrueger_" rel="me noopener noreferrer">
 	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 0.5em" alt="Twitter"/></a>
         </div>
-        
-	<p>
-		<a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a>
-	</p>
       </header>
       <section>
 
