--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,9 @@
       <header>
         <h1>{{ site.title }}</h1>
 	
-	<p>
-		Software Engineering Researcher
+	      <p>Software Engineering Researcher</p>
 		
-		<a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a>
-	</p>
+	      <p><a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a></p>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
