--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,21 +27,21 @@
         
         <div text-align="center">
         <a href="mailto:jacob.krueger@rub.de">
-		<img src="logos/mail.png" height="18px" style="margin-inline-start: 1em" alt="Mail">
+		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em margin-bottom: 3px" alt="Mail">
         </a>
 	      
-        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" rel="me noopener noreferrer">
-		<img src="logos/gs.png" height="24px" style="margin-inline-start: 1em" alt="Scholar"/></a>
+        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="_blank" rel="me noopener noreferrer">
+		<img src="logos/gs.png" height="24px" style="margin-inline-start: 0.75em" alt="Scholar"/></a>
         
-        <a href="https://dblp.uni-trier.de/pid/186/2756.html" rel="me noopener noreferrer">
-		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 1em" alt="Mail">
+        <a href="https://dblp.uni-trier.de/pid/186/2756.html" target="_blank" rel="me noopener noreferrer">
+		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 0.75em" alt="Mail">
         </a>
 		
-        <a href="https://orcid.org/0000-0002-0283-248X" target="orcid.widget" rel="me noopener noreferrer">
-		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 1em" alt="ORCID"/></a>
+        <a href="https://orcid.org/0000-0002-0283-248X" target="_blank" rel="me noopener noreferrer">
+		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 0.75em" alt="ORCID"/></a>
 		
-        <a href="https://twitter.com/JacobKrueger_" rel="me noopener noreferrer">
-	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 1em" alt="Twitter"/></a>
+        <a href="https://twitter.com/JacobKrueger_" target="_blank" rel="me noopener noreferrer">
+	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 0.75em" alt="Twitter"/></a>
         </div>
       </header>
       <section>
