--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         
         <div text-align="center">
         <a href="mailto:jacob.krueger@rub.de">
-		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em margin-bottom: 3px" alt="Mail">
+		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em; margin-bottom: 3px" alt="Mail">
         </a>
 	      
         <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="_blank" rel="me noopener noreferrer">
