--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,10 @@
         <a href="https://twitter.com/JacobKrueger_" target="_blank" rel="me noopener noreferrer">
 	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 0.75em" alt="Twitter"/></a>
         </div>
+	      
+	<div>
+		<a class="twitter-timeline" href="https://twitter.com/JacobKrueger_?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+      </div>
       </header>
       <section>
 
