--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,8 @@
         </div>
 	      
 	<div>
-		<a class="twitter-timeline" href="https://twitter.com/JacobKrueger_?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-      </div>
+		<a class="twitter-timeline" href="https://twitter.com/JacobKrueger_?ref_src=twsrc%5Etfw" data-height="200" data-chrome="noheader nofooter noborders transparent" data-tweet-limit="3"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+	</div>
       </header>
       <section>
 
