--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       
 	<ul style="list-style-type:none; margin: 0; padding=; 0">
 	   {% for item in site.data.navigation %}
-	      <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+	      <li style="display: inline"><a href="{{ item.url }}">{{ item.title }}</a></li>
 	   {% endfor %}
 	</ul>
 
