--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       <section>
       
 	<ul style="list-style-type:none; margin: 0; padding=; 0">
-	   {% for item in site.data.navigation %}
+	   {% for item in site.data.navigation.docs %}
 	      <li style="display: inline"><a href="{{ item.url }}">{{ item.title }}</a></li>
 	   {% endfor %}
 	</ul>
