--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       
 	<ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden">
 	   {% for item in site.data.navigation.docs %}
-	      <li style="display: block; text-align: center; padding: 14px 16px; text-decoration: none"><a href="{{ item.url }}">{{ item.title }}</a></li>
+	      <li style="display: inline; text-align: center; padding: 14px 16px; text-decoration: none"><a href="{{ item.url }}">{{ item.title }}</a></li>
 	   {% endfor %}
 	</ul>
 
