--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 	
 	      <p>Software Engineering Researcher
 		<br>
-	      <a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a></p>
+	      <a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer"><b>Ruhr-University Bochum</b></a></p>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
