--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 	
 	      <p>Software Engineering Researcher
 		<br>
-	      <a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer"><b>Ruhr-University Bochum</b></a></p>
+	      <a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a></p>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -50,7 +50,7 @@
       
 	<ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden">
 	   {% for item in site.data.navigation.docs %}
-	      <li style="display: inline; text-align: center; padding: 14px 16px; text-decoration: none"><a href="{{ item.url }}"><b>{{ item.title }}</b></a></li>
+	      <li style="display: inline; text-align: center; padding: 14px 16px; text-decoration: none"><a href="{{ item.url }}">{{ item.title }}</a></li>
 	   {% endfor %}
 	</ul>
 	      
