--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,16 +15,17 @@
       <header>
         <h1>{{ site.title }}</h1>
 	
-	      <p>Software Engineering Researcher
+	      <p>Assistant Professor for Software Engineering
 		<br>
-	      <a href="https://www.ruhr-uni-bochum.de/en" rel="me noopener noreferrer">Ruhr-University Bochum</a></p>
+	      <a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
         
         <div text-align="center">
         <a href="mailto:jacob.krueger@rub.de">
 		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em; margin-bottom: 3px" alt="Mail">
         </a>
 	      
-        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de&oi=ao" target="_blank" rel="me noopener noreferrer">
+        <a href="https://scholar.google.de/citations?user=kNvGUNsAAAAJ&hl=de
+        &oi=ao" target="_blank" rel="me noopener noreferrer">
 		<img src="logos/gs.png" height="24px" style="margin-inline-start: 0.75em" alt="Scholar"/></a>
         
         <a href="https://dblp.uni-trier.de/pid/186/2756.html" target="_blank" rel="me noopener noreferrer">
