--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 	      <a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
         
         <div text-align="center">
-        <a href="mailto:jacob.krueger@rub.de">
+        <a href="mailto:j.kruger@tue.nl">
 		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em; margin-bottom: 3px" alt="Mail">
         </a>
 	      
