--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
       <header>
         <h1>{{ site.title }}</h1>
 	
-	      <p>Assistant Professor for Software Engineering
-		<br>
-	      <a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
+	      <p><a href="https://research.tue.nl/en/persons/jacob-kr%C3%BCger" rel="me noopener noreferrer">Assistant Professor for Software Engineering</a></p>
+		
+	      <p><a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
         
         <div text-align="center">
         <a href="mailto:j.kruger@tue.nl">
