fixed broken twitter timeline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,10 +39,10 @@
 	      <img src="logos/twitter.png" height="24px" style="margin-inline-start: 0.75em" alt="Twitter"/></a>
         </div>
 	      
-	<div>
+	<!---<div>
 		<br>
 		<a class="twitter-timeline" href="https://twitter.com/JacobKrueger_?ref_src=twsrc%5Etfw" data-height="250" data-chrome="noheader nofooter noborders transparent"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-	</div>
+	</div>--->
       </header>
       <section>
       
