--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,10 +14,14 @@
     <div class="wrapper">
       <header>
         <h1>{{ site.title }}</h1>
+		
+		<div text-align="center">
+		<img src="logos/picture.jpg" height="5cm" alt="picture"/>
+		</div>
 	
-			<p><a href="https://research.tue.nl/en/persons/jacob-kr%C3%BCger" rel="me noopener noreferrer">Assistant Professor for Software Engineering</a>
-			</br>
-			<a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
+		<p><a href="https://research.tue.nl/en/persons/jacob-kr%C3%BCger" rel="me noopener noreferrer">Assistant Professor for Software Engineering</a>
+		</br>
+		<a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
         
         <div text-align="center">
         <a href="mailto:j.kruger@tue.nl">
@@ -29,7 +33,7 @@
 		<img src="logos/gs.png" height="24px" style="margin-inline-start: 0.75em" alt="Scholar"/></a>
         
         <a href="https://dblp.uni-trier.de/pid/186/2756.html" target="_blank" rel="me noopener noreferrer">
-		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 0.75em" alt="Mail">
+		<img src="logos/dblp.png" height="24px" style="margin-inline-start: 0.75em" alt="dblp">
         </a>
 		
         <a href="https://orcid.org/0000-0002-0283-248X" target="_blank" rel="me noopener noreferrer">
