--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,9 @@
         <h1>{{ site.title }}</h1>
 		
 		<div text-align="center">
-		<img src="logos/picture.jpg" width="100" alt="picture"/>
+		<img src="logos/picture.jpg" width="250" alt="picture" style="margin-left: auto, margin-right: auto"/>
+		</br>
+		<small>Photo: Angeline Swinkels</small>
 		</div>
 	
 		<p><a href="https://research.tue.nl/en/persons/jacob-kr%C3%BCger" rel="me noopener noreferrer">Assistant Professor for Software Engineering</a>
