--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
       <header>
         <h1>{{ site.title }}</h1>
 		
-		<div text-align="center">
-		<img src="logos/picture.jpg" width="175" alt="picture" style="margin-left: auto, margin-right: auto"/>
+		<div style="text-align: center;">
+		<img src="logos/picture.jpg" width="175" alt="picture"/>
 		</br>
 		<small>Photo: Angeline Swinkels</small>
 		</div>
