--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,17 @@
         <a href="https://orcid.org/0000-0002-0283-248X" target="_blank" rel="me noopener noreferrer">
 		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 0.75em" alt="ORCID"/></a>
         </div>
-	      
+	    
+		---
+		
+		<p>News</p>
+		
+		<p>Awesome news: I received a NWO Veni Personal Grant to work on my own project at TU/e: Conceptualizing Human Assumptions in Software Evolution (CHASE)</p>
+		
+		<p>New industry collaboration with colleagues from TU/e: We received funding by ASML and TKI HTSM for our sub-project: AI-Driven Legacy System Explanation and Refactoring</p>
+		
+		<p>New DFG project in collaboration with Alena Bleicher and Thomas Leich at Harz University: Understanding the Importance of Non-Knowledge for Software Engineering on Social-Coding Platforms (INKleSS)</p>
+		
       </header>
       <section>
       
