--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -205,8 +205,9 @@ footer {
 }
 
 .wrapper {
-	width:720px;
+	width:1080px;
 	margin:0;
+	position:static;
 }
 
 @media print, screen and (max-width: 960px) {
