formatting toying around

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 		
 		<p>News</p>
 		
-		<p>Awesome news: I received a NWO Veni Personal Grant to work on my own project at TU/e: Conceptualizing Human Assumptions in Software Evolution (CHASE)</p>
+		<p>Awesome news: I received an NWO Veni Personal Grant to work on my own project at TU/e: Conceptualizing Human Assumptions in Software Evolution (CHASE)</p>
 		
 		<p>New industry collaboration with colleagues from TU/e: We received funding by ASML and TKI HTSM for our sub-project: AI-Driven Legacy System Explanation and Refactoring</p>
 		
@@ -74,6 +74,5 @@
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
 </html>
