small formatting testingx

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 		</br>
 		<a href="https://www.tue.nl/en/" rel="me noopener noreferrer">Eindhoven University of Technology</a></p>
         
+		<div style="text-align: center;">
         <div text-align="center">
         <a href="mailto:j.kruger@tue.nl">
 		<img src="logos/mail.png" height="18px" style="margin-inline-start: 0.75em; margin-bottom: 3px" alt="Mail">
@@ -41,16 +42,22 @@
         <a href="https://orcid.org/0000-0002-0283-248X" target="_blank" rel="me noopener noreferrer">
 		<img src="logos/orcid.png" height="24px" style="margin-inline-start: 0.75em" alt="ORCID"/></a>
         </div>
+		</div>
 	    
 		<hr/>
 		
+		<div id="newsDiv">
+		
 		<p>News</p>
+		<div id="newsEntriesDiv">
 		
-		<p>Awesome news: I received an NWO Veni Personal Grant to work on my own project at TU/e: Conceptualizing Human Assumptions in Software Evolution (CHASE)</p>
+		<p>Awesome news: I received an NWO Veni Personal Grant to work on my own project at TU/e: <strong>Conceptualizing Human Assumptions in Software Evolution (CHASE)</strong></p>
 		
-		<p>New industry collaboration with colleagues from TU/e: We received funding by ASML and TKI HTSM for our sub-project: AI-Driven Legacy System Explanation and Refactoring</p>
+		<p>New industry collaboration with colleagues from TU/e: We received funding by ASML and TKI HTSM for our sub-project: <strong>AI-Driven Legacy System Explanation and Refactoring</strong></p>
 		
-		<p>New DFG project in collaboration with Alena Bleicher and Thomas Leich at Harz University: Understanding the Importance of Non-Knowledge for Software Engineering on Social-Coding Platforms (INKleSS)</p>
+		<p>New DFG project in collaboration with Alena Bleicher and Thomas Leich at Harz University: <strong>Understanding the Importance of Non-Knowledge for Software Engineering on Social-Coding Platforms (INKleSS)</strong></p>
+		</div>
+		</div>
 		
       </header>
       <section>
