--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -3,12 +3,12 @@
 
 #newsDiv {
   float: right;
-  height: 250px;
+  height: 300px;
   padding: 3px;
 }
 
 #newsEntriesDiv {
-  height: 225px;
+  height: 275px;
   overflow: auto;
 }
 
@@ -191,7 +191,8 @@ strong {
 }
 
 section {
-  width:500px;
+  width:400px;
+  float:right;
   padding-bottom:50px;
 }
 
@@ -215,7 +216,7 @@ footer {
 }
 
 .wrapper {
-	width:1080px;
+	width:700px;
 	margin:0;
 	position:static;
 }
